19-liveness-readiness-probe.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    test: liveness
  name: liveness-http
spec:
  containers:
  - name: liveness
    image: nginx
    # port no '80' is open for liveness
    livenessProbe:
      tcpSocket:
        port: 80
      initialDelaySeconds: 30
      periodSeconds: 10
    # getting the response or not one port no 80  
    readinessProbe:
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 40
      periodSeconds: 3
