16-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  # deployment labels
  labels:
    purpose: deployment-demo
    project: roboshop
    app: nginx
spec:
  replicas: 3
  # These are the labels replica set use to create pod replicas, this should match pod labels
  selector:
    matchLabels:
      purpose: deployment-demo
      project: roboshop
      app: nginx
  # This is pod definition
  template:
    metadata:
      labels:
        purpose: deployment-demo
        project: roboshop
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:stable-perl
        #image: nginx:latest
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  labels:
    purpose: service-demo
spec:
  selector:
    purpose: deployment-demo
    project: roboshop
    app: nginx
  ports:
    - protocol: TCP
      port: 80 # service port
      targetPort: 80 # container port
